jdl-openapi-controllers (draft)